--- a/www/templates/currency.html
+++ b/www/templates/currency.html
@@ -16,9 +16,12 @@
     </div>
 
     <div class="button-bar row">
-      <a class="button button-outline button-energized">Week</a>
-      <a class="button button-outline button-energized">Month</a>
-      <a class="button button-outline button-energized">Year</a>
+      <a class="button button-outline button-energized"
+          ng-click="changeTimeOffset('week')">Week</a>
+      <a class="button button-outline button-energized"
+          ng-click="changeTimeOffset('month')">Month</a>
+      <a class="button button-outline button-energized"
+          ng-click="changeTimeOffset('year')">Year</a>
     </div>
 
     <div class="row">
