--- a/www/templates/currency.html
+++ b/www/templates/currency.html
@@ -10,7 +10,8 @@
 
     <div class="row">
       <div class="col wrapper">
-        <img src="../img/coins.png" id="coins"/>
+        <canvas id="myChart" width="100%" height="100%"></canvas>
+        {{buildChart(rateArray)}}
       </div>
     </div>
 
