--- a/www/templates/currency.html
+++ b/www/templates/currency.html
@@ -10,8 +10,8 @@
 
     <div class="row">
       <div class="col wrapper">
+        <div class="chart-title">Rate dynamic:</div>
         <canvas id="myChart" width="100%" height="100%"></canvas>
-        {{buildChart(rateArray)}}
       </div>
     </div>
 
